# Eldra

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md
VSCode-Extension/: package.json
VSCode-Extension/src/: extension.ts  taskProvider.ts
VSCode-Extension/src/utilities/: directoryUtilities.ts
VSCode-Extension/src/view/: TargetConfigPanel.ts
demo/compose_demo/: settings.gradle.kts
demo/compose_demo/.fleet/: receipt.json
demo/compose_demo/composeApp/: build.gradle.kts
demo/compose_demo/composeApp/src/androidMain/kotlin/eldra/editor/: MainActivity.kt  Platform.android.kt
demo/compose_demo/composeApp/src/commonMain/kotlin/eldra/: ShaderCanvas.kt
demo/compose_demo/composeApp/src/commonMain/kotlin/eldra/editor/: App.kt  Greeting.kt  Platform.kt
demo/compose_demo/composeApp/src/desktopMain/kotlin/eldra/editor/: Platform.jvm.kt  main.kt
demo/compose_demo/composeApp/src/iosMain/kotlin/eldra/editor/: MainViewController.kt  Platform.ios.kt
demo/compose_demo/composeApp/src/wasmJsMain/kotlin/eldra/editor/: Platform.wasmJs.kt  main.kt
demo/compose_demo/composeApp/src/wasmJsMain/resources/: index.html
demo/compose_demo/gradle/: libs.versions.toml
demo/compose_demo/iosApp/Configuration/: Config.xcconfig
demo/compose_demo/iosApp/iosApp.xcodeproj/: project.pbxproj
demo/skia_demo/: D3D12HelloTriangle.cpp  D3D12HelloTriangle.h  D3D12HelloTriangle.vcxproj  D3DAMDMemoryAllocator.cpp  Main.cpp
editor/: build.gradle.kts  pubspec.yaml
editor/android/app/: build.gradle
editor/android/app/src/main/: AndroidManifest.xml
editor/android/app/src/main/kotlin/com/example/editor/: MainActivity.kt
editor/ios/Runner.xcodeproj/: project.pbxproj
editor/lib/: main.dart
editor/linux/: my_application.cc
editor/macos/Runner.xcodeproj/: project.pbxproj
engine/: Cargo.toml
engine/.run/: test.run.xml
engine/eldra-core/: Cargo.toml  build.rs
engine/eldra-core/.run/: test.run.xml
engine/eldra-core/src/: engine.rs  entity.rs  fs.rs  lib.rs  reflection.rs
engine/eldra-core/src/comp/: mod.rs  render_component.rs  transform_component.rs
engine/eldra-core/src/data/: material.rs  mod.rs  render_object.rs  skeleton.rs  texture.rs
engine/eldra-core/src/shader/: mod.rs  shader_graph.rs
engine/eldra-core/tests/: main.rs
engine/eldra-macro/: Cargo.toml
engine/eldra-macro/src/: lib.rs
engine/src/: engine.rs  entity.rs  lib.rs  node.rs
engine/src/comp/: mod.rs  script_component.rs  transform_component.rs  uarg.rs
engine/tests/: main.rs
framework/: settings.gradle.kts
framework.bk/: build.gradle.kts  settings.gradle.kts
framework.bk/editor/src/wasmWasiMain/kotlin/: MonotonicTimeEditor.kt
framework.bk/gradle/: libs.versions.toml
framework.bk/runtime/: build.gradle.kts
framework.bk/runtime/src/nativeMain/kotlin/: hello.kt
framework.bk/runtime/src/wasmWasiMain/kotlin/: MonotonicTimeRuntime.kt
framework.bk/runtime/src/wasmWasiTest/kotlin/: TestRuntime.kt
framework/editor/: build.gradle.kts  imgui_wgpu.cpp
framework/editor/src/wasmWasiTest/kotlin/: TestEditor.kt
framework/gradle/: libs.versions.toml
framework/runtime/: build.gradle.kts
framework/runtime/src/wasmWasiMain/kotlin/: MonotonicTimeRuntime.kt  WasiPrint.kt
launcher/: CMakeLists.txt  launcher.cpp
runtime/: build.gradle.kts  pubspec.yaml  settings.gradle.kts
runtime/lib/: runtime.dart
runtime/test/: runtime_test.dart
test/: D3D12HelloTriangle.cpp  D3D12HelloTriangle.h  D3D12HelloTriangle.sln  D3D12HelloTriangle.vcxproj  D3D12HelloTriangle.vcxproj.filters  D3DAMDMemoryAllocator.h  DXSample.h  DXSampleHelper.h  Main.cpp  shaders.hlsl
tools/maya_fix/: go.mod  main.go
